--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "bcrypt": "^1.0.3",
+    "meteor-node-stubs": "~0.2.4",
+    "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
+    "react-dom": "^15.6.1"
   }
 }
